--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -7,13 +7,10 @@
     <link rel="stylesheet" href="/static/styles.css" type="text/css">
     <title>Document</title>
 </head>
-<body data-th-object="${info}">
-    
-    <div th:text = "${successMessage}" th:if = "${successMessage != null}" class = "success"></div>
-
-        <div class="plain">
-            <a href="/home" class="button">Back to Home</a>
-        </div>
-    
+<body>
+    <h1>error</h1>
+    <div class="signup">
+        <a href="/home" class="button">Back to home</a>
+    </div>
 </body>
 </html>
