--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,8 +10,10 @@
 </head>
 <body>
     <h1>Homepage</h1>
+    <hr>
     <div class="signup">
-    <a href="/signup" class="button">Sign Up</a>
+    <a href="/signup" class="button">Sign Up</a> 
+    <a href="/userlist" class="button">User List</a>
 
     </div>
 </body>
