--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body >
-    <div data-th-object="${user}" style="text-align: center;">
+    <div data-th-object="${user}" style="text-align: center;"> <!--User object from showuser-->
 
         <h1>User Details</h1>
 
