--- a/src/main/resources/templates/save.html
+++ b/src/main/resources/templates/save.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/styles.css" type="text/css">
     <title>Document</title>
 </head>
-<body data-th-object="${info}">
+ <body> 
     
     <div th:text = "${successMessage}" th:if = "${successMessage != null}" class = "success"></div>
 
