add login page:

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
     <hr>
     <div class="signup">
     <a href="/signup" class="button">Sign Up</a> 
-    <a href="/userlist" class="button">User List</a>
+    <a href="/login" class="button">Login</a>
 
     </div>
 </body>
